--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,4 +3,8 @@
 
 @theme {
   --font-space: 'Space Grotesk';
+  --color-bg: #242434;
+  --color-altbg: #3A3A48;
+  --color-stroke: #686897;
+  --color-altstroke: #3F3F5A;
 }
