--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,10 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 @import "tailwindcss";
 
 @theme {
-  --font-space: 'Space Grotesk';
+  --font-space: 'Varela Round';
   --color-bg: #242434;
   --color-altbg: #3A3A48;
   --color-stroke: #686897;
   --color-altstroke: #3F3F5A;
+}
+
+.bar::-webkit-scrollbar {
+  display: none;
 }
